<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    >
    <LinearLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <TextView
                    android:id="@+id/genderLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordTitleGender"
                    android:textSize="30sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    />

        <Spinner
            android:id="@+id/GenderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@mipmap/drop_down_frame"
            />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordTitleAge"
                android:textSize="30sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                />
            <Spinner
                android:id="@+id/AgeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/drop_down_frame"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/recordTitlepostcode"
            android:textSize="30sp"
            android:textStyle="bold"
            />
            <EditText
                android:id="@+id/recordpostcode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="e.g 2500"
                android:gravity="center"
                android:inputType="number"
                />

        <Button
            android:id="@+id/submitBut"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submitButText"
            android:layout_marginTop="15dp"
            android:background="@drawable/setbar_bg"
            />

    </LinearLayout>
</RelativeLayout>


