<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="280dp"
        android:background="@mipmap/background"
        >
        <ImageButton
            android:id="@+id/close_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/dialog_x"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />


        <TextView
            android:id="@+id/title_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_join_dialog_title"
            android:layout_below="@+id/close_but"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />
        <RelativeLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_lab"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/name_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_lab"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/name_edit"
                />
            <EditText
                android:id="@+id/name_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="left"
                android:maxLength = "50"
                android:background="@drawable/rectange_corner_white"
            />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_layout"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/phone_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_lab"
                android:textSize="20sp"
                android:gravity="right"
                android:lines = "1"
                android:layout_toLeftOf="@+id/phone_edit"
                android:layout_marginRight="5dp"
                />
            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="left"
                android:maxLength = "50"
                android:background="@drawable/rectange_corner_white"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_layout"
            >
           <Button
               android:id="@+id/submit_but"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:text="@string/submitButText"
               />


        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>
