<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@mipmap/title_image"
        >
        <ImageButton
            android:id="@+id/act_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:background="@mipmap/close" />

        <TextView
            android:id="@+id/tab_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:textSize="25sp"
    android:text="*Name:"/>
    <EditText
        android:id="@+id/client_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectange_corner_white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:text="*Message:"/>
    <EditText
        android:id="@+id/message_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:padding="5dp"
        android:hint="@string/contact_us_hint"
        android:minLines="10"
        android:background="@drawable/rectange_corner_white"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/submit_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smt"
            android:layout_centerHorizontal="true"
            android:background="@drawable/setbar_bg"
            android:layout_gravity="top"
            />

    </RelativeLayout>


</LinearLayout>